  ###################################
##### Changed in Scannomatic 0.993 #####
   ###################################

*** Analysis corrects grids according to its knowledge of how it should be
    if it gets odd results.

*** Added manual grid to analysis / GUI and command line

*** Implemented GUI for regridding

*** Migrated number of scanners to main.config

*** Implemented a Force Unclaim Scanner possibility

*** Implemented an abort running analysis

*** Implemented nicer program terminate to catch all ongoing processes.

*** Moved the gridding out of the analysis-path so grids can be set manually

*** Analysis script writes logging-info to the analysis.run - file of designated
    output directory

*** Fixture-configurations record the history of the top-left placement of the grid
    per pinning-matrix format.

*** Projects have UUID:s.

*** Changed crash test dummy marker detection aglorithm so it is simple, faster
    and robuster.

  ###################################
##### Changed in Scannomatic 0.992 #####
   ###################################

*** Improved messages when running experiments and single scans. Also tweaked and
    fixed a bug or so.

*** Improved robustness of orthalogical grayscale detection

*** Improved Analyse One interface so it responds more 'correctly' to grayscale
    detections

*** Added nicer pinning matrix override GUI to analyse project

*** Gridding now has safty-margin from edge of plate-section

*** Changed the animation images

*** Changed so trashed pixels also get a buffer around them on the background

*** Changed so that blob is really a composite blob of all blobs that have
    mass center inside the best blob.

*** New Scan One dialog! Oh so nice...

*** Centroid is not explicitly tracked for blobs and outputted into the
    analysis.xml

*** If grayscale 3rd deg polyfit produces a bad curve (that doesn't 
    continously increase or decrease) for the range of interest, then
    the grayscale fails
