@@ -28,12 +28,41 @@ import types
 
 class Sane_Base():
 
-    def __init__(self, owner=None):
+    def __init__(self, owner=None, model=None, scan_mode=None):
         self.owner = owner
         self.next_file_name = None
         self._scanner_name = None
         self._program_name = "scanimage"
-        self._scan_settings = ["--source", "Transparency" ,"--format", "tiff", "--resolution", "600", "--mode", "Gray", "-l", "0",  "-t", "0", "-x", "203.2", "-y", "254", "--depth", "8"]
+        self._scan_settings = None
+
+        self._scan_settings_repo = \
+            {"EPSON V700" : \
+                {'TPU': \
+                    ["--source", "Transparency" ,"--format", "tiff", 
+                    "--resolution", "600", "--mode", "Gray", "-l", "0",  
+                    "-t", "0", "-x", "203.2", "-y", "254", "--depth", "8"],
+                'COLOR': \
+                    ["--source", "Flatbed", "--format", "tiff",
+                    "--resolution", "300", "--mode", "Color", "-l", "0",
+                    "-t", "0", "-x", "215.9", "-y", "297.18", "--depth", "8"]} }
+        if model is not None:
+            model = model.upper()
+
+        if model not in self._scan_settings_repo.keys():
+            self._model = self._scan_settings_repo.keys()[0]
+        else:
+            self._model = model
+        if scan_mode is not None:
+            scan_mode = scan_mode.upper()
+            if scan_mode == "COLOUR":
+                scan_mode = "COLOR"
+
+        if scan_mode not in self._scan_settings_repo[self._model].keys():
+            self._mode = self._scan_settings_repo[self._model].keys()[0]
+        else:
+            self._mode = scan_mode
+
+        self._scan_settings = self._scan_settings_repo[self._model][self._mode]
 
     def OpenScanner(self, mainWindow=None, ProductName=None, UseCallback=False):
         pass
