@@ -2,6 +2,10 @@
 ##### Changed in Scannomatic 0.993 #####
    ###################################
 
+*** Renamed Aquire One... to 'Drop Test'
+
+*** Added Pigmentation Scan feature
+
 *** Analysis corrects grids according to its knowledge of how it should be
     if it gets odd results.
 
